# aes_encrypt_file

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_NOTES.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  crypto_engine.c  crypto_engine.h  jni_wrapper.c
android/src/main/kotlin/com/example/aes_encrypt_file/: AesEncryptFilePlugin.kt
android/src/test/kotlin/com/example/aes_encrypt_file/: AesEncryptFilePluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/aes_encrypt_file_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  memory_monitor.dart
example/test/: widget_test.dart
ios/: aes_encrypt_file.podspec
ios/Classes/: AesEncryptFilePlugin.h  AesEncryptFilePlugin.m  SwiftAesEncryptFilePlugin.swift  crypto_engine.c  crypto_engine.h
lib/: aes_encrypt_file.dart  aes_encrypt_file_method_channel.dart  aes_encrypt_file_platform_interface.dart
